5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1643_1053.log
== TEST (2019-04-13 00:07:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input('nome do patrono: ')
if(patrono==cervo):
	men="cervo eh patrono do harry potter"
else:
	men=patrono+"nao eh patrono do harry potter"
print(men)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(patrono==cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 00:07:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input('nome do patrono: ')
if(patrono==cervo):
	men="cervo eh patrono do harry potter"
else:
	men=patrono+"nao eh patrono do harry potter"
print(men)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(patrono==cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 00:08:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input('nome do patrono: ')
if(patrono=cervo):
	men="cervo eh patrono do harry potter"
else:
	men=patrono+"nao eh patrono do harry potter"
print(men)	
	
-- ERROR:
File "XXXX", line 5
    if(patrono=cervo):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 00:08:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input('nome do patrono: ')
if(patrono=cervo):
	men="cervo eh patrono do harry potter"
else:
	men=patrono+"nao eh patrono do harry potter"
print(men)	
	
-- ERROR:
File "XXXX", line 5
    if(patrono=cervo):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 00:09:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input('nome do patrono: ')
if(patrono="cervo"):
	men="cervo eh patrono do harry potter"
else:
	men=patrono+"nao eh patrono do harry potter"
print(men)	
	
-- ERROR:
File "XXXX", line 5
    if(patrono="cervo"):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 00:09:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input('nome do patrono: ')
if(patrono=="cervo"):
	men="cervo eh patrono do harry potter"
else:
	men=patrono+"nao eh patrono do harry potter"
print(men)	
	
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 00:10:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input('nome do patrono: ')
if(patrono=="cervo"):
	men="cervo eh patrono do harry potter"
else:
	men=patrono+"nao eh patrono do harry potter"
print(men)	
	
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 00:10:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input('nome do patrono: ')
if(patrono=="cervo"):
	men="cervo eh patrono do harry potter"
else:
	men=patrono+  "nao eh patrono do harry potter"
print(men)	
	
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 00:11:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input('nome do patrono: ')
if(patrono=="cervo"):
	men="cervo eh patrono do harry potter"
else:
	men=patrono+" nao eh patrono do harry potter"
print(men)	
	
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 00:11:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input('nome do patrono: ')
if(patrono=="cervo"):
	men="cervo eh patrono do harry potter"
else:
	men=patrono+" nao eh patrono do harry potter"
print(men)	
	
-- EXECUTION TIME:
0.16163
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 00:11:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input('nome do patrono: ')
if(patrono=="cervo"):
	men="cervo eh patrono do harry potter"
else:
	men=patrono+" nao eh patrono do harry potter"
print(men)	
	
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 00:12:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input('nome do patrono: ')
if(patrono=="cervo"):
	men="cervo eh patrono do harry potter"
else:
	men=patrono+" nao eh patrono do Harry Potter"
print(men)	
	
-- EXECUTION TIME:
0.186056
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 00:13:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input('nome do patrono: ')
if(patrono=="cervo"):
	men="cervo eh patrono do Harry Potter"
else:
	men=patrono+" nao eh patrono do Harry Potter"
print(men)	
	
-- EXECUTION TIME:
0.131007
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
